# reviews-service

./: .env  Cargo.toml  readme.md
resources/: requests.http  review_requests.http  user_requests.http
resources/migrations/: db_initial.sql
src/: main.rs  router.rs
src/controller/: mod.rs  review_controller.rs  user_controller.rs
src/models/: mod.rs  register_user_request.rs  review.rs  user.rs
src/repository/: app_state.rs  mod.rs  repository.rs  review_repository.rs  user_repository.rs
src/service/: jws.rs
tests/: integration_test.rs
tests/common/: mod.rs
