[package]
name = "quotesbots"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
actix-web = "^4"
uuid = { version = "^0.8", features = ["v4"] }
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
derive_more = "^0.9"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls"] }
dotenv = "0.15"


