[package]
name = "reviews-service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
actix-web = "^4"
env_logger = "0.8"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
dotenv = "0.15"
async-trait = "0.1.86"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.15"
actix-identity = "0.5"
actix-session = { version = "0.7", features = ["cookie-session"] } #wth did I need this for??
serde_json = "1.0.138"


