[package]
name = "reviews_service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
actix-web = "^4"
env_logger = "0.11.6"
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio", "tls-rustls", "chrono"] }
dotenv = "0.15"
async-trait = "0.1.86"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.17.0"
actix-identity = "0.8.0"
serde_json = "1.0.138"


[dev-dependencies]
testcontainers = "0.23.3"